compiler/tools/fpp-check/test/event/bad_throttle_interval_seconds.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/bad_throttle_interval_seconds.fpp:5.11
    every {seconds=-1}
          ^
error: invalid integer value -1
seconds may not be negative
